infra/k8s/portfolio-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: aayushadhikari/portfolio
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-srv
spec:
  selector:
    app: portfolio
  ports:
    - name: portfolio
      protocol: TCP
      port: 3000
      targetPort: 3000
